test/bad/cachapa-assignment.tajada
c es cachapa con queso o papelón.

{
        c ≔ 4. ⫽ Error de tipos: no se puede asignar un queso a una cachapa.
}
